bus/panelproxy.h
@@ -70,6 +70,12 @@ void             bus_panel_proxy_set_cursor_location
                                                 gint32             y,
                                                 gint32             w,
                                                 gint32             h);
+void             bus_panel_proxy_set_cursor_location_relative
+                                               (BusPanelProxy     *panel,
+                                                gint32             x,
+                                                gint32             y,
+                                                gint32             w,
+                                                gint32             h);
 void             bus_panel_proxy_update_preedit_text
                                                (BusPanelProxy     *panel,
                                                 IBusText          *text,
